--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,28 @@
 body {
     font-family: 'Roboto'; 
+    font-size: 18px;
+    color: #e5e7eb;
     
+}
+
+img {
+    border: 1px solid white;
+    border-radius: 4px;
+    padding: 5px;
+    width: 300px;
+    height: 150px;
+}
+
+button {
+    background-color: #3882f6;
+    color: #e5e7eb;
+    font-family: 'Roboto';
+    font-weight: bold;
+    padding-inline: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border: 0px;
+    border-radius: 4px;
 }
 
 .header {
@@ -15,7 +37,7 @@ body {
 }
 
 .logo {
-    font-size: 15px;
+    font-size: 24px;
     text-align: left;
     margin-left: 100px;
 }
@@ -32,4 +54,30 @@ body {
     margin: 0;
     padding: 0;
     
+}
+
+.bio {
+    background-color: #1F2937;
+    color:#F9FAF8;
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+    align-items:center;
+    margin: auto;
+    padding: 60px;
+    border: 0px 20px;
+}
+
+.awesome {
+    font-size: 48px;
+    font-weight:900;
+}
+
+.info {
+    color: #1F2937;
+}
+
+.info h3 {
+    font-size: 36px;
+    font-weight: 900;
 }
