--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,12 @@ button {
     border-radius: 4px;
 }
 
+button:hover {
+    background-color: #1c5cb2;
+    color: white; 
+    border-color: white; 
+}
+
 .header {
     background-color: #1F2937;
     color: white;
@@ -71,6 +77,7 @@ button {
 .awesome {
     font-size: 48px;
     font-weight:900;
+    margin: 0;
 }
 
 .info {
@@ -88,8 +95,14 @@ button {
     display: flex;
     justify-content: center;
     gap: 10px;
-    /* border: 10px;
-    border-color: #3882f6; */
+    margin: 20px auto;
+    width: fit-content;
+}
+
+.containers {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .containers img {
@@ -100,6 +113,15 @@ button {
     padding: 0px;
     border: 3px solid #3882f6;
     border-radius: 10px;
+    align-items: center;
+}
+
+.caption {
+    margin-top: 10px;
+    height: auto;
+    display: block;
+    text-align: center;
+    max-width: 250px;
 }
 
 .quote {
@@ -110,9 +132,37 @@ button {
     font-weight: 200;
     padding: 20px;
     border: 0px;
-    margin 0px;
+    margin: 0px;
 }
 
 .quote h3 {
     text-align: right;
+}
+
+.adbox {
+    display: flex;
+    background-color: #3882f6;
+    justify-content: space-between;
+    margin: 60px;
+    padding: 30px;
+    padding-left: 100px;
+    border: 0px 20px;
+}
+
+.text-content h4, p {
+    margin: 0px;
+    margin-right: auto;
+}
+
+#signup {
+    border: 2px solid white;
+    margin: auto;
+    padding-inline: 20px;
+    
+}
+
+.footer {
+    background-color: #1F2937;
+    display: flex;
+    justify-content: center;
 }
